--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,14 @@
 
 /*menu*/
 
+.letraAzul{
+    color: #015089 !important;
+}
+
+.bgAzul{
+    background-color:  #015089 !important;
+    color: #fff !important;
+}
 .bar-color{
     background-color: #ff9c3e !important;
     color: #fff;
