--- a/www/templates/detalleEvento.html
+++ b/www/templates/detalleEvento.html
@@ -1,37 +1,35 @@
 <ion-view view-title="Detallles Finalizados" class="">
     <ion-content class="has-header has-footer">
-      <div class="row">
-          <div class="card marginCard col text-center" style="margin-bottom: 15px;">
-                
-            <div class="item item-text-wrap blue-grey-900" >
-                
-                <h1 class="letra">{{totales.aforo}}</h1>
-            </div>
 
-            <div class="item item-divider bgFooter no-padding">
-              Aforo
-            </div>
-          </div> 
-          <div class="card marginCard col text-center" style="margin-bottom: 15px;">
-                
-            <div class="item item-text-wrap blue-grey-900" >
-                
-                <h1 class="letra">{{totales.horas}}h</h1>
-            </div>
+        <div class="row">
+            <div class="card marginCard col text-center" style="margin-bottom: 15px;">
+                    
+                <div class="item item-text-wrap" >
+                    <h1 class="letraAzul">{{totales.aforo}}</h1>
+                </div>
 
-            <div class="item item-divider bgFooter no-padding">
-              Entretenimiento
-            </div>
-          </div>    
-      </div>
+                <div class="item item-divider bgFooter no-padding letraAzul">
+                    Aforo
+                </div>
+            </div> 
+            <div class="card marginCard col text-center" style="margin-bottom: 15px;">
+                    
+                <div class="item item-text-wrap" >
+                    <h1 class="letraAzul">{{totales.horas}}h</h1>
+                </div>
 
+                <div class="item item-divider bgFooter no-padding letraAzul">
+                    Entretenimiento 
+                </div>
+            </div>    
+        </div>
       <div class="list card stable-bg">
           <div class="item ">
-              <p><i class="icon ion-ios-information-outline"></i> Hemos generado <b>{{totales.empleo}}</b> empleos con este evento</p> 
+              <p><i class="icon ion-ios-information-outline"></i> Hemos generado <b>{{totalEmpleo.total}}</b> empleos con este evento</p> 
           </div>
       </div>
 
-      <h4 class="border-top text-center" style="padding-top: 2%;">Servicios</h4>
+      <h4 class="border-top text-center letraAzul" style="padding-top: 2%;">Servicios</h4>
 
       <div class="row">
         <div class="col text-center">
@@ -49,7 +47,7 @@
       </div>
 
 
-      <h4 class="border-top text-center" style="padding-top: 2%;">Contenido</h4>
+      <h4 class="border-top text-center letraAzul" style="padding-top: 2%;">Contenido</h4>
       <div class="list" style="padding-bottom: 5%;">
           <a class="item item-icon-left" ng-click="buscarActividades()">
               <i class="icon ion-android-happy" style="font-size: x-large;"></i> Actividades
