--- a/www/templates/detalleEvento.html
+++ b/www/templates/detalleEvento.html
@@ -69,6 +69,10 @@
               <i class="icon fa fa-group" style="font-size: x-large;"></i> Organizadores del Evento
               <span class="badge ">{{totales.junta}}</span>
           </a>
+          <a class="item item-icon-left" ng-click="buscarConsumo()">
+            <i class="icon fa fa-recycle" style="font-size: x-large;"></i> Compromiso Ambiental
+            <span class="badge ">5</span>
+          </a>
       </div>
 
                     
