--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,9 +12,9 @@
     color: #fff !important;
 }
 .bar-color{
-    background-color: #ff9c3e !important;
+    background-color: #FE8100 !important;
     color: #fff;
-    border-bottom: 0px solid #ff9c3e;
+    border-bottom: 0px solid #FE8100;
 }
 
 .no-padding{
